<resources>
    <string name="app_name">DRU Community</string>
    <string name="google_maps_key">AIzaSyBlfd83lHqLTBLee31ze-3Xlyah3_4FVBw</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">Register</string>
    <string name="re_password">Re - password</string>
    <string name="name">Name</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="logout_messages">Do you want to log out?</string>
    <string name="save">Save profile</string>
    <string name="id">ID</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="search">Search</string>
    <string name="status">Status</string>
    <string name="verification">Verification</string>
    <string name="change_e_mail">Change e-mail</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_e_mail">New E-mail</string>
    <string name="map">Map</string>
    <string name="follow_friend">Follow friend</string>
    <string name="un_follow_friend">Un follow friend</string>
    <string name="message">message...</string>
    <string name="read">Read</string>
    <string name="time">Time</string>
    <string name="groups">Groups</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="create_group">Create group</string>
    <string name="public_chat">Public chat</string>
    <string name="verification_completed">Verification completed</string>
    <string name="verification_not_completed">verification not completed (Click to Verify)</string>
    <string name="check_email">Please check your email</string>
    <string name="please_grant_location">Please grant location</string>
    <string name="enter_new_email">Please enter New e-mail</string>
    <string name="enter_confirm_password">Please enter Confirm password</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_old_password">Please enter old password</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="enter_re_password">Please enter re-password</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_email">Please enter e-mail</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_phone">Please enter phone</string>
    <string name="enter_phone_code">Please enter phone code</string>
    <string name="enter_length_password_8">Minimum length of password should be 8</string>
    <string name="enter_length_phone_10">The length of the phone is 10</string>
    <string name="enter_length_phone_6">The length of the phone code is 6</string>
    <string name="enter_not_match">Password do not match</string>
    <string name="check_your_email">Please check your Email</string>
    <string name="already_registered">You are already registered</string>
    <string name="filed_required">All filed are required</string>
    <string name="edit_profile">Do you want to edit the profile?</string>
    <string name="profile_update_complete">Profile update complete</string>
    <string name="click_verify">Click to Verify</string>
    <string name="image">Image</string>
    <string name="phone">Phone</string>
    <string name="phone_number">0951234567</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="enter_code_received">Enter code received</string>

</resources>
