<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/home"/>

    <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_chat_black"
            android:title="@string/chats"/>

    <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black"
            android:title="@string/groups"/>

    <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black"
            android:title="@string/map"/>

    <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_black"
            android:title="@string/profile"/>
</menu>