<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/RelativeLayoutDialog">

    <LinearLayout style="@style/LinearLayoutVertical">

        <android.support.design.widget.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEdtName"
                    style="@style/EditText"
                    android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEdtEmail"
                    style="@style/EditTextEmail"
                    android:hint="@string/e_mail" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEdtPassword"
                    style="@style/EditTextPassword"
                    android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEdtRePassword"
                    style="@style/EditTextPassword"
                    android:hint="@string/re_password" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
                android:id="@+id/mImgProfile"
                style="@style/ImageView"
                android:layout_marginTop="@dimen/layout" />

        <Button
                android:id="@+id/mBtnReg"
                style="@style/Button"
                android:text="@string/register" />
    </LinearLayout>

    <ProgressBar
            android:id="@+id/mProgressBar"
            style="@style/ProgressBar" />
</RelativeLayout>
