<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/RelativeLayoutDialog">

    <LinearLayout style="@style/LinearLayoutVertical">

        <com.google.android.material.textfield.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEdtOldPassword"
                    style="@style/EditTextPassword"
                    android:hint="@string/old_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEdtNewPassword"
                    style="@style/EditTextPassword"
                    android:hint="@string/new_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEdtRePassword"
                    style="@style/EditTextPassword"
                    android:hint="@string/re_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/mBtnChangePassword"
                style="@style/Button"
                android:text="@string/change_password" />
    </LinearLayout>

    <ProgressBar
            android:id="@+id/mProgressBar"
            style="@style/ProgressBar" />
</RelativeLayout>
