<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/layout"
        tools:context=".ui.login.EmailDialog">

    <LinearLayout
            style="@style/MatchWrap"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEtEmail"
                    style="@style/EditTextEmail"
                    android:hint="@string/e_mail" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEtPassword"
                    style="@style/EditTextPassword"
                    android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                style="@style/LinearLayoutHorizontal"
                android:padding="@dimen/layout">

            <Button
                    android:id="@+id/mBtReg"
                    style="@style/Button"
                    android:layout_marginTop="@dimen/zero"
                    android:text="@string/register" />

            <Button
                    android:id="@+id/mBtLogin"
                    style="@style/Button"
                    android:layout_marginStart="@dimen/layout"
                    android:layout_marginTop="@dimen/zero"
                    android:text="@string/login" />
        </LinearLayout>

        <TextView
                android:id="@+id/mTvForgotPassword"
                style="@style/TextViewSmall"
                android:layout_gravity="start"
                android:text="@string/forgot_your_password" />
    </LinearLayout>

    <ProgressBar
            android:id="@+id/mProgressBar"
            style="@style/ProgressBar" />

</RelativeLayout>