<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/RelativeLayoutDialog">

    <LinearLayout style="@style/LinearLayoutVertical">

        <com.google.android.material.textfield.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEdtNewEmail"
                    style="@style/EditTextEmail"
                    android:hint="@string/new_e_mail" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEdtConfirmPassword"
                    style="@style/EditTextPassword"
                    android:hint="@string/confirm_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/mBtnChangeEmail"
                style="@style/Button"
                android:text="@string/change_e_mail" />
    </LinearLayout>

    <ProgressBar
            android:id="@+id/mProgressBar"
            style="@style/ProgressBar" />
</RelativeLayout>
