<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/RelativeLayoutDialog"
        tools:context=".dialog.CreateGroupDialog">

    <LinearLayout style="@style/LinearLayoutVertical">

        <android.support.design.widget.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEdtName"
                    style="@style/EditText"
                    android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/MatchWrap">

            <EditText
                    android:id="@+id/mEdtPassword"
                    style="@style/EditTextPassword"
                    android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/mBtnCreateGroup"
                style="@style/Button"
                android:text="@string/create_group" />
    </LinearLayout>

    <ProgressBar
            android:id="@+id/mProgressBar"
            style="@style/ProgressBar" />
</RelativeLayout>