<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/RelativeLayout"
        tools:context=".ui.login.LoginActivity">

    <LinearLayout
            android:id="@+id/mLogin"
            style="@style/LinearLayoutVertical"
            android:layout_margin="@dimen/login"
            android:padding="@dimen/layout">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_dru" />

        <TextView
                style="@style/TextViewLarge"
                android:text="@string/app_name" />

        <Button
                android:id="@+id/mBtEmail"
                style="@style/Button"
                android:layout_width="200dp"
                android:drawableStart="@drawable/ic_email_black"
                android:text="@string/e_mail" />

        <Button
                android:id="@+id/mBtPhone"
                style="@style/Button"
                android:layout_width="200dp"
                android:drawableStart="@drawable/ic_phone_black"
                android:text="@string/phone" />
    </LinearLayout>

</RelativeLayout>
