<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/MatchWrap"
        android:layout_marginTop="@dimen/little"
        android:paddingStart="@dimen/layout"
        android:paddingEnd="0dp">

    <TextView
            android:id="@+id/mTvDate"
            style="@style/TextViewSmall"
            android:layout_centerHorizontal="true"
            android:text="@string/date"
            android:textColor="@android:color/holo_blue_dark" />

    <LinearLayout
            android:layout_width="@dimen/message"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mTvDate"
            android:gravity="center_vertical"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/mTvMessage"
                style="@style/TextView"
                android:background="@drawable/shape_message_left"
                android:text="@string/message" />

        <ImageView
                android:id="@+id/mImgImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        <LinearLayout
                style="@style/WrapWrap"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/little"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/mTvRead"
                    style="@style/TextViewSmall"
                    android:layout_gravity="start"
                    android:visibility="invisible" />

            <TextView
                    android:id="@+id/mTvTime"
                    style="@style/TextViewSmall"
                    android:text="@string/time" />
        </LinearLayout>

        <TextView
                android:id="@+id/mTvLocation"
                style="@style/TextView"
                android:layout_gravity="bottom"
                android:text="@string/location"
                android:textColor="#81C784" />
    </LinearLayout>
</RelativeLayout>