<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/RelativeLayout">

    <LinearLayout
            android:id="@+id/profile"
            style="@style/LinearLayoutHorizontal"
            android:gravity="center_vertical">

        <ImageView
                android:id="@+id/mImgProfile"
                style="@style/ImageView"
                android:layout_width="@dimen/image_home"
                android:layout_height="@dimen/image_home" />

        <LinearLayout
                style="@style/LinearLayoutVertical"
                android:layout_marginStart="@dimen/five"
                android:gravity="start">

            <TextView
                    android:id="@+id/mTvName"
                    style="@style/TextView"
                    android:text="@string/name" />

            <TextView
                    android:id="@+id/mTvStatus"
                    style="@style/TextViewSmall"
                    android:text="@string/status" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search"
            style="@style/MatchWrap"
            android:layout_below="@+id/profile">

        <EditText
                android:id="@+id/mEtSearch"
                style="@style/EditText"
                android:hint="@string/search" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mRecyclerView"
            style="@style/RecyclerView"
            android:layout_below="@+id/search"
            tools:listitem="@layout/item_user" />
</RelativeLayout>
